--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="logo">#A19D6C</color>
+    <color name="green_light">#60C883</color>
+    <color name="gray_title">#747474</color>
+    <color name="orange">#FF8B6A</color>
+    <color name="green_bold">#83A872</color>
 </resources>
